achieve host page by jTable and move select to filtering div

--- a/tbd/static/tbd/css/user_style.css
+++ b/tbd/static/tbd/css/user_style.css
@@ -6,4 +6,11 @@
     .path_input {
         width: 600px;
     }
+    
+    div.filtering {
+        margin-bottom: 5px;
+        border: 1px solid #999;
+        padding: 10px;
+        background-color: #EEE;
+    }
 }
