almost done except jira page

--- a/tbd/templates/tbd/base.html
+++ b/tbd/templates/tbd/base.html
@@ -25,7 +25,7 @@
                         <li {% block nav_build_attr %}{% endblock %}><a href="{% url 'tbd_build' %}">Build</a></li>
                         <li {% block nav_host_attr %}{% endblock %}><a href="{% url 'tbd_host' %}">Host</a></li>
                         <li {% block nav_testcase_attr %}{% endblock %}><a href="{% url 'tbd_testcase' %}">TestCase</a></li>
-                        <li {% block nav_testdata_attr %}{% endblock %}><a href="{% url 'tbd_testdata' %}">Crash</a></li>
+                        <li {% block nav_crash_attr %}{% endblock %}><a href="{% url 'tbd_crash' %}">Crash</a></li>
                         <li class="disabled"><a href="#">To-Do</a></li>
                         <li class="dropdown pull-right">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle">
