--- a/tbd/templates/tbd/build.html
+++ b/tbd/templates/tbd/build.html
@@ -68,11 +68,11 @@
                 },
                 build_version: {
                     title: 'Build Version',
-                    width: '40%'
+                    width: '35%'
                 },
                 build_short_name: {
                     title: 'Build Name',
-                    width: '20%'
+                    width: '15%'
                 },
                 crash_num: {
                     title: 'Total Crash',
@@ -80,14 +80,18 @@
                     display: function(data) {
                         console.log(data);
                         if ('crash_num' in data.record) {
-                            crash_num = data.record.crash_num;
-                            build_id = data.record.build_id;
-                            return '<a href="{% url "tbd_testdata" %}?build_id=' + build_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + ' crashes</span></a>';
+                            var crash_num = data.record.crash_num;
+                            var build_id = data.record.build_id;
+                            return '<a href="{% url "tbd_crash" %}?build_id=' + build_id + '"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"> ' + crash_num + ' crashes</span></a>';
                         }
                         return 0;
                     },
                     create: false,
                     edit: false
+                },
+                build_test_hours: {
+                    title: 'Test Hours',
+                    width: '10%'
                 },
                 build_server_path: {
                     title: 'Build Server Path',
