--- a/tbd/templates/tbd/crash.html
+++ b/tbd/templates/tbd/crash.html
@@ -370,6 +370,7 @@
                 jira_category: {
                     title: 'JIRA Cate',
                     width: '10%',
+                    options: {{ jira_category_choice | safe }},
                     create: false,
                     edit: false
                 },
